# experience-recorder

./: .flake8  .gitignore  README.md  pyproject.toml
.github/workflows/: publish-pypy.yml  test-coverage.yml  test-doc.yml  test-lint.yml
conf/: global.yaml
docs/: requirements.txt
docs/source/: computer.rst  conf.py  configuration.rst  experience_recorder.rst  human.rst  index.rst  perceptions.rst  recorder.rst  senses.rst  template.rst
experience_recorder/: configuration.py  datasets.py  generate_dataset.py  main.py  recorder.py  roll_rewards.py  senses.py  skills.py
experience_recorder/computer/: __init__.py  audio.py  display.py
experience_recorder/configuration/: configuration.py
experience_recorder/human/: human.py
experience_recorder/perceptions/: perceptions.py
experience_recorder/recorder/: recorder.py
experience_recorder/senses/: senses.py
experience_recorder/skills/: skills.py
tests/: hci_interaction_processes.py  test_computer.py  test_conf.py  test_configuration.py  test_recording.py  test_senses.py  test_template.py
tests/conf/: global.yaml
